--- a/apps/play/src/styles.scss
+++ b/apps/play/src/styles.scss
@@ -11,7 +11,7 @@ html, body {
 }
 
 
-.grad, .ant-btn {
+.grad, .ant-btn, .cube1, .sk-cube {
     background-color: #d4418e !important;
     background-image: linear-gradient(315deg, #d4418e 0%, #6906c5 74%) !important;
 }
