--- a/apps/play/src/app/host/host.component.html
+++ b/apps/play/src/app/host/host.component.html
@@ -20,7 +20,7 @@
                 >
                 <thead>
                     <tr>
-                        <th [nzChecked]="setOfCheckedId.size === myPlaylists.total" (nzCheckedChange)="onAllChecked($event)"> En catálogo</th>
+                        <th [nzChecked]="setOfCheckedId.size === myPlaylists.total"> En catálogo</th>
                         <th>Portada</th>
                         <th>Título</th>
                     </tr>
